2015-05-10  Per Bothner  <per@bothner.com>

	* larceny-tests/README: New file, lightly edited from Larceny version.

	* larceny-tests/tests/scheme/time.sld: Fix rounding calculation error.

2015-05-07  Per Bothner  <per@bothner.com>

	* larceny-tests: Imported more tests from the Larceny sources.
	Re-arranged to use tests/scheme and run sub-directories to match.
	* Makefile.am: Update accordingly.

2015-05-03  Per Bothner  <per@bothner.com>

	* larceny-tests/test.sld: Larceny test driver library.
	* larceny-tests/case-lambda.sld: New test, from Larceny R7RS tests.
	* larceny-tests/case-lambda.sps: Driver for test.
	* Makefile.am: Update to run Larceny tests.

2015-04-27  Andrea Bernardini <andrebask@gmail.com>
	    Per Bothner  <per@bothner.com>

	* classes2.scm: New test, for redefinition of variable bound
	to function.  Needs seperate/explicit compilation to trigger.
	* obj-test.scm: Apply new test.

2015-04-16  Andrea Bernardini <andrebask@gmail.com>
	    Per Bothner  <per@bothner.com>

	* exception2.scm: New test for when exception variable is captured.

2015-04-05  Jamison Hope  <jrh@theptrgroup.com>

	* quaternion-test.scm: Add tests for quaternions as vectors and
	rotations.

2015-04-02  Andrea Bernardini <andrebask@gmail.com>
	    Per Bothner  <per@bothner.com>

	* macros2.scm: New test - used to cause VerifyError.
	* Makefile.am: Update accordingly.

2015-03-29  Andrea Bernardini <andrebask@gmail.com>
	    Per Bothner  <per@bothner.com>

	* try1.scm: New testcase - used to cause VerifyError.
	* Makefile.am: Update accordingly.

2015-03-26  Per Bothner  <per@bothner.com>

	* values2.scm: Test for inlined called-with-values.
	* inlining.expected: Add expected Code size for above functions.
	* Makefile.am: Update accordingly.

2015-03-26  Andrea Bernardini <andrebask@gmail.com>
	    Per Bothner  <per@bothner.com>

	* location2.scm: New testcases - triggered bug in recent setter
	optimization.
	* location3.scm: Another new testcase, relating to wrong setting